// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersCountCard should render the UsersCountCard component with normal text hint 1`] = `
<div>
  <article
    class="svelte-14k6rag"
    style="--overview-card-color: #8c2f87;"
  >
    <div
      class="overview-card-top svelte-14k6rag"
    >
      <div
        class="overview-card-heading svelte-14k6rag"
      >
        <div
          class="overview-card-title svelte-14k6rag"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 24px; --icon-height: 24px;"
          >
            <object
              src="ic-asset-search-users.svg/"
            />
          </div>
           
          <h2
            class="svelte-14k6rag"
          >
            Users
          </h2>
        </div>
         
        <div
          class="overview-card-value svelte-14k6rag"
        >
          10
        </div>
      </div>
       
      <div
        class="overview-card-content svelte-14k6rag"
      >
        <div
          slot="body"
        >
          Number of unique users who performed a search
        </div>
      </div>
    </div>
     
    <div
      class="overview-card-footer svelte-14k6rag"
    />
  </article>
</div>
`;

exports[`UsersCountCard should render the UsersCountCard component with warning text hint 1`] = `
<div>
  <article
    class="svelte-14k6rag"
    style="--overview-card-color: #8c2f87;"
  >
    <div
      class="overview-card-top svelte-14k6rag"
    >
      <div
        class="overview-card-heading svelte-14k6rag"
      >
        <div
          class="overview-card-title svelte-14k6rag"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 24px; --icon-height: 24px;"
          >
            <object
              src="ic-asset-search-users.svg/"
            />
          </div>
           
          <h2
            class="svelte-14k6rag"
          >
            Users
          </h2>
        </div>
         
        <div
          class="overview-card-value svelte-14k6rag"
        >
          1
        </div>
      </div>
       
      <div
        class="overview-card-content svelte-14k6rag"
      >
        <div
          slot="body"
        >
          The number of users is unusually low. This could mean additional
      information needs to be sent with your search queries.
      
          <a
            class="svelte-1c0jp0i"
            href="__DOCS_BASE_URL__/intro/searchdashboard.html"
            target="_blank"
          >
            See our docs.
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="overview-card-footer svelte-14k6rag"
    />
  </article>
</div>
`;
